Archive2/7f/ebf64918b08042/output
+ g++-4.9 -std=c++14 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
+ ./a.out
+ clang++ -std=c++14 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion -stdlib=libc++ main.cpp -lsupc++
main.cpp:7:7: error: must use a typedef to declare a conversion to 'int (*)(int, int)'
    (*operator int() const)(int, int)
      ^
1 error generated.
