Archive2/7f/ebf64918b08042/main.cpp
struct A
{
private:
    int (*_foo)(int a, int b);

public:
    (*operator int() const)(int, int)
    {
        return _foo;
    }
};

int main(){ }
